<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>uk.gov.companieshouse</groupId>
        <artifactId>companies-house-parent</artifactId>
        <version>2.1.15</version>
        <relativePath/>
    </parent>

    <artifactId>item-handler</artifactId>
    <version>unversioned</version>
    <name>item-handler</name>
    <description>
        Handler service dealing with placed orders and producing individual items to be processed internally
    </description>

    <properties>
        <java.version>21</java.version>

        <!-- Plugin Dependencies -->
        <maven-compiler-plugin.version>3.15.0</maven-compiler-plugin.version>
        <maven-surefire-plugin.version>3.5.6</maven-surefire-plugin.version>
        <spring-boot-maven-plugin.version>4.1.0</spring-boot-maven-plugin.version>
        <jacoco-maven-plugin.version>0.8.15</jacoco-maven-plugin.version>
        <opentelemetry-instrumentation-bom.version>2.30.0</opentelemetry-instrumentation-bom.version>
        <jib-maven-plugin.version>3.5.2</jib-maven-plugin.version>

        <!-- Internal Dependencies -->
        <ch-dependency-bom.version>0.1.15</ch-dependency-bom.version>
        <ch-test-bom.version>0.1.15</ch-test-bom.version>
        <api-sdk-java.version>7.2.2</api-sdk-java.version>
        <private-api-sdk-java.version>7.2.7</private-api-sdk-java.version>

        <!-- External Dependencies -->
        <spring.boot.version>4.1.0</spring.boot.version>
        <avro.version>1.12.1</avro.version>
        <gson.version>2.14.0</gson.version>
        <log4j.version>2.26.1</log4j.version>
        <mapstruct.version>1.6.3</mapstruct.version>
        <snakeyaml.version>2.6</snakeyaml.version>
        <commons-lang3.version>3.20.0</commons-lang3.version>

        <!-- Testing Dependencies -->
        <system-rules.version>1.19.0</system-rules.version>
        <testcontainers.version>2.0.5</testcontainers.version>
        <mockserver-client-java.version>7.5.0</mockserver-client-java.version>
        <hamcrest.version>3.0</hamcrest.version>

        <sonar.exclusions>
            **/config/FeatureOptions.java,
            **/config/FeatureOptionsConfig.java,
            **/email/CertificateOrderConfirmation.java,
            **/itemsummary/CertificateEmailConfig.java,
            **/itemsummary/CertifiedCopyEmailConfig.java,
            **/itemsummary/CertificateEmailData.java,
            **/itemsummary/CertificateSummary.java,
            **/itemsummary/CertifiedCopyEmailData.java,
            **/itemsummary/CertifiedCopySummary.java,
            **/itemsummary/DeliverableItemGroup.java,
            **/itemsummary/EmailConfig.java,
            **/itemsummary/EmailData.java,
            **/itemsummary/EmailMetadata.java,
            **/itemsummary/ItemGroup.java,
            **/itemsummary/PaymentDetails.java,
            **/itemsummary/OrderItemPair.java
        </sonar.exclusions>

        <start-class>uk.gov.companieshouse.itemhandler.ItemHandlerApplication</start-class>

        <argLine>
            --add-opens java.base/java.util=ALL-UNNAMED
            --add-opens java.base/java.lang=ALL-UNNAMED
        </argLine>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>uk.gov.companieshouse</groupId>
                <artifactId>ch-dependency-bom</artifactId>
                <version>${ch-dependency-bom.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>uk.gov.companieshouse</groupId>
                <artifactId>ch-test-bom</artifactId>
                <version>${ch-test-bom.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>io.opentelemetry.instrumentation</groupId>
                <artifactId>opentelemetry-instrumentation-bom</artifactId>
                <version>${opentelemetry-instrumentation-bom.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-opentelemetry</artifactId>
        </dependency>
        <dependency>
            <groupId>io.opentelemetry.instrumentation</groupId>
            <artifactId>opentelemetry-logback-appender-1.0</artifactId>
            <version>2.30.0-alpha</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>jul-to-slf4j</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>ch.qos.logback</groupId>
                    <artifactId>logback-classic</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-logging</artifactId>
        </dependency>

        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest</artifactId>
            <version>${hamcrest.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
            <version>${mapstruct.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons-lang3.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>uk.gov.companieshouse</groupId>
            <artifactId>private-api-sdk-java</artifactId>
            <version>${private-api-sdk-java.version}</version>
        </dependency>

        <dependency>
            <groupId>uk.gov.companieshouse</groupId>
            <artifactId>api-sdk-java</artifactId>
            <version>${api-sdk-java.version}</version>
        </dependency>

        <dependency>
            <groupId>uk.gov.companieshouse</groupId>
            <artifactId>api-sdk-manager-java-library</artifactId>
        </dependency>

        <dependency>
            <groupId>uk.gov.companieshouse</groupId>
            <artifactId>environment-reader-library</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-mongodb</artifactId>
        </dependency>

        <dependency>
            <groupId>uk.gov.companieshouse</groupId>
            <artifactId>structured-logging</artifactId>
            <scope>compile</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>${gson.version}</version>
        </dependency>

        <dependency>
            <groupId>uk.gov.companieshouse</groupId>
            <artifactId>kafka-models</artifactId>
        </dependency>

        <dependency>
            <groupId>org.apache.avro</groupId>
            <artifactId>avro</artifactId>
            <version>${avro.version}</version>
        </dependency>

        <dependency>
            <groupId>uk.gov.companieshouse</groupId>
            <artifactId>ch-kafka</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.kafka</groupId>
            <artifactId>spring-kafka</artifactId>
        </dependency>

        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>${snakeyaml.version}</version>
        </dependency>

        <!-- Test -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webmvc-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-api</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.springframework.kafka</groupId>
            <artifactId>spring-kafka-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-aspectj</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>testcontainers</artifactId>
            <version>${testcontainers.version}</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-api</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>testcontainers-mockserver</artifactId>
            <version>${testcontainers.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mock-server</groupId>
            <artifactId>mockserver-client-java</artifactId>
            <version>${mockserver-client-java.version}</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>com.ethlo.time</groupId>
                    <artifactId>itu</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-api</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.graphql-java</groupId>
                    <artifactId>graphql-java</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring-boot-maven-plugin.version}</version>
                <configuration>
                    <mainClass>${start-class}</mainClass>
                    <layout>ZIP</layout>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco-maven-plugin.version}</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <fork>true</fork>
                    <meminitial>128m</meminitial>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <maxmem>512m</maxmem>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${mapstruct.version}</version>
                        </path>
                        <!-- other annotation processors -->
                    </annotationProcessorPaths>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>com.google.cloud.tools</groupId>
                <artifactId>jib-maven-plugin</artifactId>
                <version>${jib-maven-plugin.version}</version>
                <configuration>
                    <extraDirectories>
                        <paths>
                            <path>
                                <from>${project.basedir}/api-enumerations</from>
                                <into>/api-enumerations</into>
                            </path>
                        </paths>
                    </extraDirectories>
                    <container>
                        <expandClasspathDependencies>true</expandClasspathDependencies>
                    </container>
                    <from>
                        <image>416670754337.dkr.ecr.eu-west-2.amazonaws.com/ci-corretto-build-21:latest</image>
                    </from>
                    <to>
                        <image>416670754337.dkr.ecr.eu-west-2.amazonaws.com/item-handler:latest</image>
                    </to>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.sonarsource.scanner.maven</groupId>
                <artifactId>sonar-maven-plugin</artifactId>
                <version>${sonar-maven-plugin.version}</version>
            </plugin>
        </plugins>
    </build>
</project>
